--- a/pine-generator/src/main/resources/template/Controller.java.vm
+++ b/pine-generator/src/main/resources/template/Controller.java.vm
@@ -1,8 +1,8 @@
 package ${package}.${moduleName}.controller;
 
 import java.util.List;
-import CommonPage;
-import CommonResult;
+import com.pine.common.api.CommonPage;
+import com.pine.common.api.CommonResult;
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -65,7 +65,7 @@ public class ${className}Controller {
     public CommonResult<CommonPage<${className}>> page(${className} record,
                                                                     @RequestParam(value = "pageSize", defaultValue = "5") Integer pageSize,
                                                                     @RequestParam(value = "pageNum", defaultValue = "1") Integer pageNum) {
-        List<${className}> ${className}List = ${classname}Service.get${className}List(record);
+        List<${className}> ${className}List = ${classname}Service.get${className}ByPage(record,pageSize,pageNum);
         return CommonResult.success(CommonPage.restPage(${className}List));
     }
 
